# camera_ws

./: .gitignore  55_leader_arm_teleop_with_monitor.py  README.md  Readme.md  additional_calib_ui.py  analyze_calib_data.py  calibration_core.py  calibration_ui.py  check_calibration_result.py  check_new_npz.py  dataset_20260528_214053.npz  home_reset_baseline.json  homeoffset_core.py  ko_main_ui.py  log.txt  log_elbow.txt  main_ui.py  manual_cartesian_control.py  marker_detection.py  requirements.txt  setup.py  sweep_points_left_joint_A_axis_2.txt  sweep_points_left_joint_A_axis_4.txt  sweep_points_left_joint_B_axis_4.txt  sweep_points_left_joint_B_axis_6.txt  sweep_points_right_joint_A_axis_2.txt  sweep_points_right_joint_A_axis_4.txt  sweep_points_right_joint_A_axis_5.txt  sweep_points_right_joint_A_axis_6.txt  sweep_points_right_joint_B_axis_3.txt  sweep_points_right_joint_B_axis_4.txt  sweep_points_right_joint_B_axis_5.txt  sweep_points_right_joint_B_axis_6 (1).txt  sweep_points_right_joint_B_axis_6.txt  sweep_points_right_marker_axis_4.txt  sweep_points_right_marker_axis_5.txt  sweep_points_right_marker_axis_6.txt  test_euler.py  test_yaw.py
calibration/: Calibrator.py  CalibratorBase.py  IntrinsicsCalibrator.py  JointCalibrator.py  MarkerCalibrator.py  PitchHeadCalibrator.py  additional_calib_ui.py  camera_intrinsic_calib_ui.py  marker_and_single_joint_calib_ui.py  marker_bracket_calib_ui.py  ready_poses.yaml  robot_pitch_head_calib_ui.py  sweep_points_left_joint_A_axis_4.txt  sweep_points_left_joint_B_axis_6.txt  (+2 more)
camera_test/: CMakeLists.txt  main.cpp
(+261 files in other folders)
